# AI-TRPG-Launcher

./: AI_TRPG_Demo.spec  README.md  key.txt
Code/: config.py  paths.py  pyproject.toml
Code/ai_trpg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Code/audio/: voice_manager.py
Code/core/: file_manager.py  general_tools.py  json_tools.py  log_manager.py
Code/llm/: agent_manager.py
Code/script/: entry.py  run_cli.py  run_tk.py
Code/ui/: tk_app.py
Save/: TRPG_SAVE_AUTO_20260110_010555.json  TRPG_SAVE_AUTO_20260210_200811.json  TRPG_SAVE_AUTO_20260210_201722.json
