[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-trpg"
version = "0.1.0"
description = "AI TRPG Demo"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.0.0",
  "requests",
  "pyttsx3",
  "pywin32; platform_system == 'Windows'",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_trpg*"]
